# chess-coach

./: .gitignore  CLAUDE.md  Procfile  README.md  nixpacks.toml  pyproject.toml  railway.toml
src/chess_coach/: __init__.py  __main__.py  config.py
src/chess_coach/api/: routes.py  schemas.py  server.py  websocket.py
src/chess_coach/cli/: app.py  display.py
src/chess_coach/coach/: session.py  system_prompts.py  tool_loop.py  tools.py
src/chess_coach/engine/: stockfish.py
src/chess_coach/openings/: kid.py
src/chess_coach/storage/: database.py  repository.py
tests/: test_storage.py
